Efmub-Ogy/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <description>Delta CC - US-29 - Req-2002</description>
        <formula>TODAY() -  Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Also_Known_As__c</fullName>
        <description>DeltaCC- US10 - Req-846</description>
        <inlineHelpText>Nickname</inlineHelpText>
        <label>Also Known As</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Alert_Picture__c</fullName>
        <description>When the alert image is displayed, the customer has one or more alerts. View the Customer Account Details to see the alerts for this customer.</description>
        <formula>IF( Any_Alert__c ,IMAGE(&quot;/resource/Image_png_AlertAll2&quot;, &quot;All Alerts&quot;,31,31),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When the alert image is displayed, the customer has one or more alerts. View the Customer Account Details to see the alerts for this customer.</inlineHelpText>
        <label>Any Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_Alert__c</fullName>
        <description>When the alert image is displayed, the customer has one or more alerts.</description>
        <formula>IF (OR( Contacted_DOT__c,  Excessive_Compensation__c,  Fraud__c,  Legal__c,  No_Fly__c,  Threatened_DOT__c,  Warning_Letter__c ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>When the alert image is displayed, the customer has one or more alerts.</inlineHelpText>
        <label>Any Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Cases__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Average Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baggage_Fraud_Alert_Image__c</fullName>
        <formula>IF(Baggage_Fraud_Alert__c = True, IMAGE(&quot;/resource/Image_png_BaggageFraudAlert&quot;, 
&quot;Baggage Fraud&quot;, 30,100),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baggage Fraud Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baggage_Fraud_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Baggage Fraud Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Care_Fraud_Alert_Date__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Care Fraud Alert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Care_Fraud_Alert_Image__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <formula>CASE( TEXT(Care_Fraud_Alert__c), &apos;Known&apos;, IMAGE(&quot;/resource/Image_gif_Red&quot;, &quot;red&quot;, 30, 100) , &apos;Suspected&apos;, IMAGE(&quot;/resource/Image_gif_Yellow&quot;, &quot;yellow&quot;, 30, 100) , &apos;None&apos;, &quot;&quot;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Care Fraud Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Care_Fraud_Alert__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Care Fraud Alert</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Known</fullName>
                </value>
                <value>
                    <fullName>Suspected</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cases_last_12_months__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Cases last 12 months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contacted_DOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer contacted the DOT.</description>
        <inlineHelpText>The customer contacted the DOT.</inlineHelpText>
        <label>Contacted DOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Miles_FB__c</fullName>
        <description>DeltaCC- US10, 12 - Req-504, 523</description>
        <label>Available Miles (FB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Miles__c</fullName>
        <description>DeltaCC- US10, 12 - Req-504, 521</description>
        <label>Available Miles (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Alerts__c</fullName>
        <formula>IF( 
No_Fly__c,IMAGE(&quot;/resource/Image_png_no_fly&quot;, &quot;No Fly&quot;),&apos;&apos; 
)&amp; &quot; &quot; &amp;
IF(Fraud__c,IMAGE(&quot;/resource/Image_png_fraud&quot;, &quot;Fraud&quot;),&apos;&apos;
)&amp; &quot; &quot; &amp;
IF(Excessive_Compensation__c,IMAGE(&quot;/resource/Image_png_excessive_compensation&quot;, &quot;Excessive Compensation&quot;),&apos;&apos;
)&amp; &quot; &quot; &amp;
IF( 
Contacted_DOT__c,IMAGE(&quot;/resource/Image_png_Contacted_DOT&quot;, &quot;Contacted DOT&quot;),&apos;&apos; 
)&amp; &quot; &quot; &amp; 
IF( 
Threatened_DOT__c,IMAGE(&quot;/resource/Image_png_threatened_dot&quot;, &quot;Threatened DOT&quot;),&apos;&apos; 
)&amp; &quot; &quot; &amp; 
IF( 
Legal__c,IMAGE(&quot;/resource/Image_png_legal&quot;, &quot;Legal&quot;),&apos;&apos; 
)&amp; &quot; &quot; &amp; 
IF( 
Warning_Letter__c,IMAGE(&quot;/resource/Image_png_warning_letter&quot;, &quot;Warning Letter&quot;),&apos;&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Alerts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Level__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Customer Satisfaction Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Value__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <formula>IMAGE( 
CASE(SkyMiles_Status__c, 
&quot;Bronze&quot;, &quot;/img/samples/stars_100.gif&quot;, 
&quot;Silver&quot;, &quot;/img/samples/stars_200.gif&quot;, 
&quot;Gold&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;Platinum&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;Diamond&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT_Image__c</fullName>
        <formula>CASE( TEXT(DOT__c), &apos;Yes&apos;, IMAGE(&quot;/resource/Image_png_DOTLogo&quot;, &quot;DOT&quot;, 30, 30) , &apos;No&apos;, IMAGE(&quot;/img/samples/color_white.gif&quot;, &quot;white&quot;, 15, 100), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOT__c</fullName>
        <description>DeltaCC- US8 - Req-508</description>
        <label>DOT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delta_Sky_Club__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Delta Sky Club</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Member_Id_Number__c</fullName>
        <externalId>true</externalId>
        <label>Employee Member Id Number</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Escalated_Cases__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Escalated Cases</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excessive_Compensation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer has been identified as receiving extensive compensation within the past 12 months.</description>
        <inlineHelpText>The customer has been identified as receiving extensive compensation within the past 12 months.</inlineHelpText>
        <label>Excessive Compensation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FADeptNb__c</fullName>
        <label>FADeptNb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName_SoundEx__c</fullName>
        <label>First Name SoundEx</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flying_Blue_Number__c</fullName>
        <description>The customer&apos;s Flying Blue Number</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the customer&apos;s Flying Blue Number, if available</inlineHelpText>
        <label>Flying Blue Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flying_Blue_Status__c</fullName>
        <description>DeltaCC- US10, 12 - Req-523</description>
        <label>Flying Blue Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Club 2000</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Ivory (Base)</fullName>
                </value>
                <value>
                    <fullName>Flying Young</fullName>
                </value>
                <value>
                    <fullName>Flying Young Fledgling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fraud__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer has been associated with participating in fraudulent activities.</description>
        <inlineHelpText>The customer has been associated with participating in fraudulent activities.</inlineHelpText>
        <label>Fraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>The customer&apos;s gender</description>
        <inlineHelpText>Select the gender of the customer</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Language_Preference__c</fullName>
        <description>DeltaCC- US10 - Req-499</description>
        <label>Language Preference</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Chinese-Simplified</fullName>
                </value>
                <value>
                    <fullName>Chinese-Traditional</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastName_SoundEx__c</fullName>
        <description>DeltaCC- US71 - Req-633, 634</description>
        <label>Last Name SoundEx</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Case__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Last Case</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Loyalty_Refresh__c</fullName>
        <label>Last Loyalty Refresh</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Year_MQD_SM__c</fullName>
        <label>Last Year MQD (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Year_MQM_SM__c</fullName>
        <label>Last Year MQM (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Year_MQS_SM__c</fullName>
        <label>Last Year MQS (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Access_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Access ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Concord_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Concord ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer has a pending legal case with Delta.</description>
        <inlineHelpText>The customer has a pending legal case with Delta.</inlineHelpText>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lifetime_Miles_FB__c</fullName>
        <description>DeltaCC- US10, 12 - Req-504, 523</description>
        <label>Lifetime Miles (FB)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lifetime_Miles__c</fullName>
        <description>DeltaCC- US10, 12 - Req-503, 521</description>
        <label>Lifetime Miles (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loyalty_Refresh_Alert_Image__c</fullName>
        <formula>IF(
  AND(
    OR(
     NOT(ISBLANK(SkyMiles_Number__c)),
     NOT(ISBLANK(Flying_Blue_Number__c))
    ),
    OR(
      ISNULL(Last_Loyalty_Refresh__c),
      DATEVALUE(Last_Loyalty_Refresh__c) &lt; TODAY()
    )
  ),
  IMAGE(&quot;/resource/image_refreshFromLoyaltyReminder&quot;, &quot;Loyalty Refresh Overdue&quot;, 50, 50) &amp; &quot; &quot;,
  &quot;&quot;
)</formula>
        <label>Loyalty Refresh Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MQD__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Current Year MQD (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQM__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Current Year MQM (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MQS__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Current Year MQS (SM)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MiddleName_SoundEx__c</fullName>
        <description>DeltaCC- US71 - Req-633, 634</description>
        <label>Middle Name SoundEx</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Million_Miler__c</fullName>
        <description>DeltaCC- US10, 12 - Req-521</description>
        <label>Million Miler</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Fly_Effective_Date__c</fullName>
        <description>DeltaCC- US10 - Req-543</description>
        <label>No Fly Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Fly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer is on the “no fly” list and is banned from flying Delta.</description>
        <inlineHelpText>The customer is on the “no fly” list and is banned from flying Delta.</inlineHelpText>
        <label>No Fly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Email_2_Description__c</fullName>
        <description>DeltaCC- US13 - Req-498</description>
        <label>Other Email 2 Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email_2__c</fullName>
        <description>DeltaCC- US13 - Req-498</description>
        <label>Other Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Email_3_Description__c</fullName>
        <description>DeltaCC- US13 - Req-498</description>
        <label>Other Email 3 Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email_3__c</fullName>
        <description>DeltaCC- US13 - Req-498</description>
        <label>Other Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Email_Description__c</fullName>
        <description>DeltaCC- US13 - Req-498</description>
        <label>Other Email Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <description>Other email address for the customer</description>
        <inlineHelpText>Enter an additional email address</inlineHelpText>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Other_Phone_Description__c</fullName>
        <description>DeltaCC- US10 - Req-496</description>
        <label>Other Phone Description</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <description>DeltaCC- US13, 14 - Req-498, 615</description>
        <label>Personal Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>DeltaCC- US13 - Req-525</description>
        <label>Preferred Email</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal Email</fullName>
                </value>
                <value>
                    <fullName>Work Email</fullName>
                </value>
                <value>
                    <fullName>Other Email</fullName>
                </value>
                <value>
                    <fullName>Other Email 2</fullName>
                </value>
                <value>
                    <fullName>Other Email 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <description>DeltaCC- US10 - Req-530</description>
        <label>Preferred Phone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Home Phone</fullName>
                </value>
                <value>
                    <fullName>Work Phone</fullName>
                </value>
                <value>
                    <fullName>Other Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SkyMiles_Image__c</fullName>
        <formula>CASE( TEXT(SkyMiles_Status__c), 

&apos;Diamond Medallion&apos;, IMAGE(&quot;/resource/Image_jpeg_SkyMilesDiamondCard&quot;, &quot;Diamond&quot;, 30, 45), 

&apos;Platinum Medallion&apos;, IMAGE(&quot;/resource/Image_jpeg_SkyMilesPlatinumCard&quot;, &quot;Platinum&quot;, 30, 45), 

&apos;Gold Medallion&apos;, IMAGE(&quot;/resource/Image_jpeg_SkyMilesGoldCard&quot;, &quot;Gold&quot;, 30, 45), 

&apos;Silver Medallion&apos;, IMAGE(&quot;/resource/Image_jpeg_SkyMilesSilverCard&quot;, &quot;Silver&quot;, 30, 45),

&apos;Base Member&apos;, IMAGE(&quot;/resource/Image_jpeg_SkyMilesBaseCard&quot;, &quot;Base&quot;, 30, 45), 

&apos;None&apos;, IMAGE(&quot;/img/samples/color_white.gif&quot;, &quot;white&quot;, 15, 100), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SkyMiles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkyMiles_Number__c</fullName>
        <description>DeltaCC- US10, 12 - Req-521</description>
        <externalId>true</externalId>
        <label>SkyMiles Number</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SkyMiles_Status__c</fullName>
        <description>DeltaCC- US10, 12 - Req-521</description>
        <label>SkyMiles Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Diamond Medallion</fullName>
                </value>
                <value>
                    <fullName>Platinum Medallion</fullName>
                </value>
                <value>
                    <fullName>Gold Medallion</fullName>
                </value>
                <value>
                    <fullName>Silver Medallion</fullName>
                </value>
                <value>
                    <fullName>Base Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threatened_DOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer threatened to contact the DOT.</description>
        <inlineHelpText>The customer threatened to contact the DOT.</inlineHelpText>
        <label>Threatened DOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <description>DeltaCC- US6 - Req-490</description>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Diamond</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Virgin_Atlantic_Flying_Club_Number__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <externalId>true</externalId>
        <label>Virgin Atlantic Flying Club Number</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Virgin_Atlantic_Flying_Club_Status__c</fullName>
        <label>Virgin Atlantic Flying Club Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warning_Letter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The customer received a warning letter regarding their unacceptable behavior and could be banned from flying Delta.</description>
        <inlineHelpText>The customer received a warning letter regarding their unacceptable behavior and could be banned from flying Delta.</inlineHelpText>
        <label>Warning Letter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <description>The customer&apos;s business email address</description>
        <inlineHelpText>Enter the customer&apos;s business email address</inlineHelpText>
        <label>Work Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <description>DeltaCC- US10 - Req-496</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>X360_Customer__c</fullName>
        <description>If the customer is also a 360 customer</description>
        <label>360 Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>YTD_Revenue__c</fullName>
        <description>DeltaCC- US10 - Req-520</description>
        <label>YTD Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.ALLOW_PORTAL_SELF_REG</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>